--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -288,7 +288,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
   (delight 'auto-fill-function nil 'emacs)
 #+END_SRC
 
-** smartparens - Pairs & expressions
+** smartparens - Pairs & symbolic expressions
 [[https://github.com/Fuco1/smartparens][smartparens (GitHub)]]
 
 #+BEGIN_SRC emacs-lisp
@@ -317,6 +317,47 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     :hook
     (((prog-mode comint-mode) . smartparens-mode)
      (smartparens-mode . show-smartparens-mode))
+    :preface
+    (declare-function sp-local-pair "smartparens")
+
+    (defun koek-sp/separate-sexp (_open-delimiter action context)
+      "Separate just inserted sexp from next sexp.
+  ACTION and CONTEXT are symbols, see `sp-pair'.  _OPEN-DELIMITER
+  is ignored."
+      (when (and (eq action 'insert) (eq context 'code))
+        (save-excursion
+          (sp-up-sexp)
+          (unless (looking-at (rx (or blank ")" "]" "}" line-end)))
+            (insert " ")))))
+
+    (defun koek-sp/setup-separate-sexp-handler (mode &rest open-delimiters)
+      "Setup separate-sexp handler in MODE for OPEN-DELIMITERS.
+  MODE is a major mode symbol.  OPEN-DELIMITERS are one or more
+  strings, the delimiters to open pairs."
+      (dolist (open-delimiter open-delimiters)
+        (sp-local-pair mode open-delimiter nil
+                       :post-handlers '(:add koek-sp/separate-sexp))))
+
+    (defun koek-sp/format-c-block (_open-delimiter action context)
+      "Format just inserted multiple line C block.
+  ACTION and CONTEXT are symbols, see `sp-pair'.  _OPEN-DELIMITER
+  is ignored."
+      (when (and (eq action 'insert) (eq context 'code))
+        (save-excursion
+          (insert "\n")
+          (indent-according-to-mode))
+        (indent-according-to-mode)))
+
+    (defun
+        koek-sp/setup-format-c-block-on-return-handler
+        (mode &rest open-delimiters)
+      "Setup format-c-block handler in MODE for OPEN-DELIMITERS.
+  MODE is a major mode symbol.  OPEN-DELIMITERS are one or more
+  strings, the delimiters to open pairs."
+      (dolist (open-delimiter open-delimiters)
+        (sp-local-pair mode open-delimiter nil
+                       ;; For event names, see `single-key-description'
+                       :post-handlers '(:add (koek-sp/format-c-block "RET")))))
     :init
     (bind-keys
      ("C-M-{" . beginning-of-defun)
@@ -326,6 +367,11 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     (require 'smartparens-config)
 
     (setq sp-navigate-interactive-always-progress-point t)
+    (setq sp-navigate-reindent-after-up ())
+    (koek-sp/setup-separate-sexp-handler 'emacs-lisp-mode "(")
+    (koek-sp/setup-separate-sexp-handler 'scheme-mode "(")
+    (koek-sp/setup-format-c-block-on-return-handler 'js2-mode "{" "[")
+    (koek-sp/setup-format-c-block-on-return-handler 'json-mode "{" "[")
     :delight)
 #+END_SRC
 
