[emacs] Stop highlighting inserted pair.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -388,6 +388,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
 
     (setq sp-navigate-interactive-always-progress-point t)
     (setq sp-navigate-reindent-after-up ())
+    (setq sp-highlight-pair-overlay nil)
     (koek-sp/setup-separate-sexp-handler 'clojure-mode "(" "[" "{" "\"")
     (koek-sp/setup-separate-sexp-handler 'emacs-lisp-mode "(" "[" "\"")
     (koek-sp/setup-separate-sexp-handler 'scheme-mode "(" "\"")
