--- a/README.org
+++ b/README.org
@@ -14,6 +14,8 @@
 - Clojure:
   - [[http://www.oracle.com/technetwork/java/javase/downloads/index.html][Java SE JDK]]
   - [[https://leiningen.org/][Leiningen]]
+- Erlang:
+  - [[https://www.erlang.org/][Erlang/OTP]]
 - JavaScript:
   - [[https://github.com/sourcegraph/javascript-typescript-langserver][javascript-typescript-langserver]]
   - [[https://nodejs.org/][Node.js]]
@@ -33,6 +35,9 @@ On Arch Linux, run:
   # Clojure
   pacman -S jdk9-openjdk
   # leiningen (AUR)
+
+  # Erlang
+  pacman -S erlang-nox
 
   # JavaScript
   pacman -S nodejs npm python2
