--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1141,7 +1141,10 @@ Prefix map ~projectile~ is sorted before prefix map ~documentation~.
 #+BEGIN_SRC emacs-lisp
   (use-package cider
     :ensure t
-    :after clojure-mode
+    :after clojure-mode)
+
+  (use-package cider-mode
+    :defer t
     :delight)
 #+END_SRC
 
@@ -1359,11 +1362,13 @@ For more information, see [[https://ternjs.net/doc/manual.html#configuration][Pr
     (defvar geiser-active-implementations)
 
     ;; Set implementations before geiser is loaded
-    (setq geiser-active-implementations '(guile))
-    ;; Package name is geiser but feature name is geiser-mode
-    :delight (geiser-mode nil geiser-mode))
+    (setq geiser-active-implementations '(guile)))
 
   (use-package geiser-autodoc
+    :defer t
+    :delight)
+
+  (use-package geiser-mode
     :defer t
     :delight)
 #+END_SRC
