--- a/README.org
+++ b/README.org
@@ -74,7 +74,7 @@ Run:
 
 ** Spell checking contractions fails
 Visit the dictionary's affix file. On Arch Linux, affix files are
-saved in ~/usr/share/hunspell/~. Add:
+saved in =/usr/share/hunspell/=. Add:
 
 #+BEGIN_SRC fundamental
   ICONV 1
